70: Volume mounts for containers and VMs
